structmeta-tests/tests/compile_fail/parse/single_variant_fail.stderr
error: parse failed.
 --> $DIR/single_variant_fail.rs:1:41
  |
1 | structmeta_tests::parse_single_variant!(10 10);
  |                                         ^^
